@@ -1,5 +1,6 @@
 ﻿1.0.13.0
 * Fixed bug when font without style attribute and font with "normal" attribute were considered different , this caused sometimes for italic styles to be overwriten
+* Fixed a bug when CSS stylesheet for one element contained more than one occurance of same parameter (in this case previously entire element was ignored)
 
 1.0.12.0
 * Changed the About page generation to allow change "About" page from caller application
